syntax = "proto3";

import "Messages/AddressMessages.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Validation";

package Validator;

service AddressValidator {
  rpc Validate (AddressValidationRequests) returns (AddressValidationReplies);
}