syntax = "proto3";

import "Messages/BirthDayMessages.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Validation";

package Validator;

service BirthDayValidator {
  rpc Validate (BirthDayValidationRequest) returns (BirthDayValidationReply);
}